--- a/src/app.css
+++ b/src/app.css
@@ -38,6 +38,13 @@
 	--color-secondary-900: oklch(30% 0.1 30);
 	--color-secondary-950: oklch(20% 0.11 30);
 
-	--font-body: var(--font-family), var(--font-fallback);
-	--font-display: var(--font-body);
+	--font-body: 'Jost', sans-serif;
+	--font-display: 'Jost', sans-serif;
+}
+
+@layer base {
+	body {
+		@apply font-body text-gray-900 antialiased;
+		background-color: #F2F0EB; /* Light beige background guess */
+	}
 }
